syntax = "proto3";
package gitopia.gitopia.gitopia;

option go_package = "github.com/gitopia/gitopia/v3/x/gitopia/types";

message Branch {
  uint64 id = 1;
  uint64 repositoryId = 2;
  string name = 3; 
  string sha = 4; 
  bool allowForcePush= 5;
  int64 createdAt = 6; 
  int64 updatedAt = 7; 
}
